Release 0.40 - June X, 2005

Bugs fixed:
- Budget left was rendered incorrectly when over budget (1216951).



Release 0.39 - June 6, 2005

Bugs fixed:
- When sorting by due date, composite tasks in the tree view are 
  now sorted according to the most urgent subtask instead of the 
  least urgent subtask.
  
Featues added:
- Tasks can be sorted on all attributes (subject, start date, due date,
  budget, etc.) This includes options to sort ascending or descending 
  and to first sort by status (active/inactive/completed).
- Sorting order can be changed by clicking on column headers.
- Added German translation, thanks to J. Martin.
- Minor view menu changes (1189978)



Release 0.38 - May 22, 2005

Features added:
- Simplified Chinese user interface added, thanks to limodou.
- Autosave setting to automatically save after every change (1188194).
- Backup setting to create a backup when opening a Task Coach file.
- Added preference dialog to edit preferences not related to the 
  view settings.
- Now using gettext for i18n.



Release 0.37 - May 14, 2005

Bugs fixed:
- Icons in tree view on Windows 2000 (1194654).

Features added:
- Columns in the task list view can be turned on/off by right-clicking
  on the column headers.
- Tasks can be sorted either by due date or alphabetically (1177984).
- More options when editing an effort record.  
- Used a new DatePickerCtrl (1191909).



Release 0.36 - May 5, 2005

Features added:
- French user interface added, thanks to Jerome Laheurte.

Bugs fixed:
- Descriptions loose newlines after reload (1194259).



Release 0.35 - May 2, 2005

Bugs fixed:
- Toolbar icons had a black background instead of a transparent
  background on some Windows platforms (1190230).
- Package i18n was missing (1190967).
  
Features added:
- Internationalization support. Task Coach is available with
  Dutch and English user interface (1164461).
- Added 'expand selected task' and 'collapse selected task' menu