@@ -3,6 +3,10 @@ Release 0.40 - June X, 2005
 Bugs fixed:
 - Budget left was rendered incorrectly when over budget (1216951).
 
+Features added:
+- Tasks can belong to zero or more categories. Tasks can be hidden
+  by category (<sf>).
+
 
 
 Release 0.39 - June 6, 2005
